<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_border">

    <ImageView
        android:id="@+id/resImage"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/padding_5"
        android:layout_marginRight="@dimen/padding_5"
        android:background="@drawable/layout_border"
        android:contentDescription="@string/no_image"
        app:srcCompat="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/resImage"
        android:layout_toRightOf="@+id/resImage"
        android:orientation="vertical">

        <TextView
            android:id="@+id/restaurantListName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_3"
            android:text="@string/restaurant_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/foodDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:padding="@dimen/padding_3"
            android:text="@string/food_description"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="@dimen/padding_5">

            <TextView
                android:id="@+id/restaurantListDeliveryFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:fontFamily="serif"
                android:text="@string/delivery_fee"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/restaurantListStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:fontFamily="serif"
                android:text="@string/restaurant_status"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
